--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,9 @@
 {
     display: none;
 }
+
+/* Partie "hébergements à Marseille + les plus populaires" */
+
 .conteneur
 {
     display: grid;
@@ -98,3 +101,81 @@
 {
     padding-left: 1em;
 }
+
+/* Fin partie "hébergements à Marseille + les plus populaires" */
+
+/* Partie formulaire de recherche */ 
+
+.conteneur_recherche
+{
+    background-color: black;
+    padding: 1em;
+    width: 20em;
+    display: flex;
+    align-items: center;
+}
+#icone_localisation
+{
+    background-color: #F2F2F2;
+    height: 100%;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+    display: flex;
+    align-items: center;
+    border-top: 1px #F2F2F2 solid;
+    border-bottom: 1px #F2F2F2 solid;
+    border-left: 1px #F2F2F2 solid;
+    border-top-left-radius: 1em;
+    border-bottom-left-radius: 1em;
+}
+#formulaire_recherche
+{
+    background-color: yellow;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    border-top: 1px #F2F2F2 solid;
+    border-bottom: 1px #F2F2F2 solid;
+}
+#rechercher
+{
+    height: 95%;
+    border: none;
+    padding-left: 0.5em;
+    font-weight: bold;
+}
+.sous_conteneur_recherche_bordures
+{
+    height: 2.5em;
+    display: flex;
+    align-items: center;
+    border-top: 2.5% #F2F2F2 solid;
+    border-bottom: 2.5% #F2F2F2 solid;
+}
+#bouton_recherche
+{
+    background-color: #0065FC;
+    color: white;
+    height: 100%;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+    display: flex;
+    align-items: center;
+    border-top: 1px #0065FC solid;
+    border-bottom: 1px #0065FC solid;
+    border-right: 1px #0065FC solid;
+    border-top-right-radius: 1em;
+    border-bottom-right-radius: 1em;
+}
+#bouton_recherche:hover
+{
+    cursor: pointer;
+}
+.sous_conteneur_recherche
+{
+    height: 2.5em;
+    display: flex;
+    align-items: center;
+}
+
+/* Fin partie formulaire de recherche */
