--- a/styles.css
+++ b/styles.css
@@ -345,3 +345,37 @@ a
 }
 
 /* Fin partie activités à Marseille */
+
+/* Partie Footer */
+
+footer
+{
+    background-color: #F2F2F2;
+}
+.grid_footer
+{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin-left: 5em;
+}
+.parties_footer
+{
+    display: flex;
+    flex-direction: column;
+}
+.titre_footer
+{
+    font-weight: bold;
+    margin-bottom: 1.3em;
+}
+.lien_footer
+{
+    margin-bottom: 0.8em;
+}
+.lien_footer:hover
+{
+    color: #0065FC;
+    transition-duration: 200ms;
+}
+
+/* Fin partie Footer */
