--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,17 @@ a
     text-decoration: none;
     color: black;
 }
-
+h1
+{
+    font-size: 1.5em;
+    margin-bottom: 0.3em;
+    margin-left: 80px;
+}
+#texte_1
+{
+    margin-left: 80px;
+    margin-top: 0em;
+}
 
 /* Partie formulaire de recherche */ 
 
@@ -30,7 +40,8 @@ a
     padding: 1em;
     width: 20em;
     display: flex;
-    align-items: center;
+    margin-left: 80px;
+    padding: 0em;
 }
 #icone_localisation
 {
@@ -107,6 +118,7 @@ a
     font-weight: bold;
     margin-top: 1em;
     margin-bottom: 1em;
+    margin-left: 80px;
 }
 .icone_filtres
 {
