--- a/mobile.css
+++ b/mobile.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1024px) and (min-width: 600px)
+@media screen and (max-width: 600px)
 {
 *
 {
@@ -28,12 +28,12 @@ h1
 {
     font-size: 1.5em;
     margin-bottom: 0.3em;
-    margin-left: 80px;
+    margin-left: 15px;
     margin-top: 1.5em;
 }
 #texte_1
 {
-    margin-left: 80px;
+    margin-left: 15px;
     margin-top: 0em;
 }
 body
@@ -46,7 +46,7 @@ body
 {
     float: left;
     width: 100px;
-    padding-left: 80px;
+    padding-left: 15px;
 }
 #conteneur_liens_header
 {
@@ -85,7 +85,7 @@ body
     padding: 1em;
     width: 20em;
     display: flex;
-    margin-left: 80px;
+    margin-left: 15px;
     padding: 0em;
 }
 #icone_localisation
@@ -162,7 +162,7 @@ body
     font-weight: bold;
     margin-top: 1em;
     margin-bottom: 1em;
-    margin-left: 80px;
+    margin-left: 15px;
 }
 .icone_filtres
 {
@@ -229,7 +229,7 @@ body
     padding-bottom: 5px;
     padding-left: 9px;
     margin-right: 5px;
-    margin-left: 80px;
+    margin-left: 15px;
     font-size: 0.8em;
 }
 
