--- a/mobile.css
+++ b/mobile.css
@@ -44,18 +44,17 @@ body
 /* Partie header */
 #logo
 {
-    float: left;
+    float:inline-start;
     width: 100px;
     padding-left: 15px;
 }
 #conteneur_liens_header
 {
     display: flex; 
-    justify-content: flex-end;
+    flex-direction: column-reverse;
 }
 .liens_header
 {
-    margin-right: 3em;
     padding-top: 1em;
     display: flex;
     align-items: flex-start;
@@ -67,7 +66,6 @@ body
 }
 .sinscrire
 {
-    margin-right: 3em;
     font-weight: bold;
     padding-top: 1em;
     color: #0065FC;
@@ -76,17 +74,19 @@ body
 {
     border-top: 2px solid #0065FC;
 }
+#menu_liens
+{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
 /* Fin partie header */
 
 /* Partie formulaire de recherche */ 
 
 .conteneur_recherche
 {
-    padding: 1em;
-    width: 20em;
     display: flex;
-    margin-left: 15px;
-    padding: 0em;
+    justify-content: center;
 }
 #icone_localisation
 {
@@ -239,8 +239,8 @@ body
 
 .conteneur
 {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    display: flex;
+    flex-direction: column;
 }
 .conteneur_vignette
 {
@@ -257,11 +257,10 @@ body
 
 .marge_vignette
 {
-    margin: 0em 1em 1em 1em;
+    margin: 0em 0em 1em 0em;
 }
 .conteneur_hebergement
 {
-    background-color: #F2F2F2;
     border-radius: 2em;
     height: 100%;
     display: flex;
@@ -270,8 +269,8 @@ body
 .conteneur_hebergement_2
 {
     background-color: #F2F2F2;
-    border-radius: 2em;
-    height: 100%;
+    padding-left: 1em;
+    padding-right: 1em;
 }
 .texte_et_vignettes
 {
@@ -280,7 +279,6 @@ body
 }
 .titre_partie_1
 {
-    margin-left: 2em;
     margin-top: 1.5em;
 }
 .image_2 img
@@ -294,7 +292,6 @@ body
 #afficher_plus
 {
     text-decoration: none;
-    margin-left: 2.5em;
     margin-top: 1.5em;
     color: black;
     font-weight: bold;
@@ -328,7 +325,6 @@ body
 {
     font-size: 1.5em;
     padding-top: 0.8em;
-    padding-right: 1.2em;
 }
 /* Fin partie "hébergements à Marseille + les plus populaires" */
 
@@ -344,7 +340,7 @@ body
 {
     background-size: cover;
     width: 100%;
-    height: 15em;
+    height: 8em;
     border-top-left-radius: 1em;
     border-top-right-radius: 1em;
     background-position: center center;
@@ -356,7 +352,7 @@ body
 }
 #titre_activites
 {
-    margin-left: 3.3em;
+    margin-left: 1em;
 }
 .vignette_activites
 {
@@ -365,13 +361,14 @@ body
     border-radius: 1em;
     margin-right: 1em;
     margin-left: 1em;
+    margin-bottom: 1em;
 }
 .lien_activites
 {
-    margin: 1em;
     border-radius: 1em;
     background-color: white;
     box-shadow: 0.2em 0.2em 0.8em #CDCAD1;
+    width: 100%;
 }
 .lien_activites:hover
 {
@@ -380,6 +377,7 @@ body
 }
 .texte_activites
 {
+    font-weight: bold;
     padding-left: 1em;
 }
 
@@ -393,14 +391,14 @@ footer
 }
 .grid_footer
 {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    margin-left: 5em;
+    display: flex;
+    flex-direction: column;
 }
 .parties_footer
 {
     display: flex;
     flex-direction: column;
+    margin-left: 1em;
 }
 .titre_footer
 {
@@ -427,16 +425,6 @@ footer
 {
     display: flex;
     flex-direction: column-reverse;
-    padding-left: 3em;
-    padding-right: 3em;
-}
-.marge_conteneur
-{
-    margin: 2em;
-}
-.marge_conteneur_2
-{
-    margin: 2em;
 }
 .alignement_image_vignette
 {
@@ -455,20 +443,19 @@ footer
 }
 .conteneur_images_activites
 {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    padding: 3em;
+    display: flex;
+    flex-direction: column;
 }
 .double_vignettes
 {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    flex-direction: column;
 }
 .image_activites
 {
     background-size: cover;
     width: 100%;
-    height: 15em;
+    height: 8em;
     border-top-left-radius: 1em;
     border-top-right-radius: 1em;
     background-position: center center;
