--- a/mobile.css
+++ b/mobile.css
@@ -124,8 +124,10 @@ body
 .conteneur_recherche
 {
     display: flex;
+    justify-content: space-between;
     height: 3em;
     margin-left: 1em;
+    margin-right: 1em;
 }
 #icone_localisation
 {
@@ -288,6 +290,11 @@ body
     margin-right: 5px;
     margin-left: 15px;
     font-size: 0.8em;
+    float: left;
+}
+.conteneur_info
+{
+    margin-bottom: 1.5em;
 }
 
 /* Fin partie info */
@@ -311,7 +318,19 @@ body
     box-shadow: 0.2em 0.2em 0.8em #b4b2b6;
     transition-duration: 200ms;
 }
-
+.conteneur_vignette_2
+{
+    background-color: white;
+    padding: 0.5em;
+    border-radius: 1em;
+    box-shadow: 0.2em 0.2em 0.8em #CDCAD1;
+    height: 9em;
+}
+.conteneur_vignette_2:hover
+{
+    box-shadow: 0.2em 0.2em 0.8em #b4b2b6;
+    transition-duration: 200ms;
+}
 .marge_vignette
 {
     margin: 0em 0em 1em 0em;
@@ -339,7 +358,7 @@ body
 }
 .titre_partie_1
 {
-    margin-top: 1.5em;
+    margin-top: 1em;
 }
 .image_2 img
 {
@@ -347,7 +366,14 @@ body
 }
 .texte_vignette
 {
-    padding-left: 0.2em;
+    padding-left: 1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.conteneur_etoiles
+{
+    padding-bottom: 0.5em;
 }
 #afficher_plus
 {
@@ -358,6 +384,7 @@ body
     font-size: 1.2em;
     margin-bottom: 2em;
     width: 6em;
+    margin-left: 0.2em;
 }
 #afficher_plus:hover
 {
@@ -370,6 +397,7 @@ body
 .fa-star
 {
     color: #0065FC;
+    font-size: 0.9em;
 }
 .star_grise
 {
@@ -410,9 +438,38 @@ body
 {
     display: none;
 }
+.image_activites_3
+{
+    background-size: cover;
+    width: 100%;
+    height: 8em;
+    border-top-left-radius: 1em;
+    border-top-right-radius: 1em;
+    background-position: center center;
+}
+    
+.image_activites_3 img 
+{
+    display: none;
+}
+.image_activites_4
+{
+    background-size: cover;
+    width: 100%;
+    height: 8em;
+    border-top-left-radius: 1em;
+    border-top-right-radius: 1em;
+    background-position: center center;
+}
+    
+.image_activites_4 img 
+{
+    display: none;
+}
 #titre_activites
 {
     margin-left: 0.8em;
+    margin-top: 0em;
 }
 .vignette_activites
 {
@@ -496,7 +553,7 @@ footer
 {
     background-size: cover;
     width: 20em;
-    height: 10em;
+    height: 9em;
     border-bottom-left-radius: 1em;
     border-top-left-radius: 1em;
     width: 100%;
