--- a/styles.css
+++ b/styles.css
@@ -257,6 +257,10 @@ body
     margin-left: 80px;
     font-size: 0.8em;
 }
+.conteneur_info
+{
+    margin-top: 2em;
+}
 
 /* Fin partie info */
 
@@ -284,7 +288,18 @@ body
     box-shadow: 0.2em 0.2em 0.8em #b4b2b6;
     transition-duration: 200ms;
 }
-
+.conteneur_vignette_2
+{
+    background-color: white;
+    padding: 0.5em;
+    border-radius: 1em;
+    box-shadow: 0.2em 0.2em 0.8em #CDCAD1;
+}
+.conteneur_vignette_2:hover
+{
+    box-shadow: 0.2em 0.2em 0.8em #b4b2b6;
+    transition-duration: 200ms;
+}
 .marge_vignette
 {
     margin: 1em 1em 1em 1em;
@@ -357,6 +372,13 @@ body
 .texte_vignette
 {
     padding-left: 1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.conteneur_etoiles
+{
+    padding-bottom: 0.5em;
 }
 #afficher_plus
 {
@@ -410,7 +432,7 @@ body
 {
     background-size: cover;
     width: 100%;
-    height: 35.2em;
+    height: 25.2em;
     border-top-left-radius: 1em;
     border-top-right-radius: 1em;
     background-position: center center;
@@ -424,13 +446,41 @@ body
 {
     background-size: cover;
     width: 100%;
-    height: 15em;
+    height: 10em;
     border-top-left-radius: 1em;
     border-top-right-radius: 1em;
     background-position: center center;
 }
     
 .image_activites_2 img 
+{
+    display: none;
+}
+.image_activites_3
+{
+    background-size: cover;
+    width: 100%;
+    height: 13em;
+    border-top-left-radius: 1em;
+    border-top-right-radius: 1em;
+    background-position: center center;
+}
+    
+.image_activites_3 img 
+{
+    display: none;
+}
+.image_activites_4
+{
+    background-size: cover;
+    width: 100%;
+    height: 7em;
+    border-top-left-radius: 1em;
+    border-top-right-radius: 1em;
+    background-position: center center;
+}
+    
+.image_activites_4 img 
 {
     display: none;
 }
