--- a/styles.css
+++ b/styles.css
@@ -346,7 +346,12 @@ body
     flex-direction: column;
     width: 100%;
 }
-.titre_partie_1
+#titre_partie_1
+{
+    margin-left: 1em;
+    margin-top: 1.5em;
+}
+.titre_partie_2
 {
     margin-left: 1em;
     margin-top: 1.5em;
