--- a/styles/littledesktop.css
+++ b/styles/littledesktop.css
@@ -1,5 +1,4 @@
-@media screen and (min-width: 1351px)
-{
+@media screen and (max-width: 1350px) and (min-width: 1025px){
 *
 {
     font-family: 'raleway',Arial;
@@ -24,16 +23,20 @@ a
     text-decoration: none;
     color: black;
 }
+b 
+{
+    font-size: 96%;
+}
 h1
 {
     font-size: 1.5em;
     margin-bottom: 0.3em;
-    margin-left: 80px;
+    margin-left: 32px;
     margin-top: 1.5em;
 }
 #texte_1
 {
-    margin-left: 80px;
+    margin-left: 2em;
     margin-top: 0em;
 }
 body
@@ -44,7 +47,7 @@ body
 /* Partie header */
 #logo
 {
-    margin-left: 80px;
+    margin-left: 2em;
 }
 #conteneur_liens_header
 {
@@ -105,7 +108,7 @@ body
     padding: 1em;
     width: 20em;
     display: flex;
-    margin-left: 80px;
+    margin-left: 2em;
     padding: 0em;
     height: 3em;
 }
@@ -188,7 +191,7 @@ body
     font-weight: bold;
     margin-top: 1em;
     margin-bottom: 1em;
-    margin-left: 80px;
+    margin-left: 2em;
 }
 .icone_filtres
 {
@@ -254,7 +257,7 @@ body
     padding-bottom: 5px;
     padding-left: 9px;
     margin-right: 5px;
-    margin-left: 80px;
+    margin-left: 2em;
     font-size: 0.8em;
 }
 .conteneur_info
@@ -306,7 +309,7 @@ body
 }
 .marge_vignette_2
 {
-    margin: 1em 3em 1em 3em;
+    margin: 1em 1.5em 1em 1.5em;
 }
 .conteneur_hebergement
 {
@@ -315,8 +318,8 @@ body
     height: 100%;
     display: flex;
     justify-content: center;
-    padding-right: 2em;
-    padding-left: 2em;
+    padding-right: 0.5em;
+    padding-left: 0.5em;
 }
 .conteneur_hebergement_2
 {
@@ -327,17 +330,17 @@ body
 #partie_1_conteneur
 {
     display: flex;
-    padding-left: 3em;
-    padding-right: 3em;
+    padding-left: 1em;
+    padding-right: 1em;
 }
 .marge_conteneur
 {
-    margin: 2em;
+    margin: 2em 1em 2em 1em;
     width: 70%;
 }
 .marge_conteneur_2
 {
-    margin: 2em;
+    margin: 2em 1em 2em 1em;
     width: 30%;
 }
 .texte_et_vignettes
@@ -350,11 +353,13 @@ body
 {
     margin-left: 1em;
     margin-top: 1.5em;
+    font-size: 1.3em;
 }
 .titre_partie_2
 {
     margin-left: 1em;
     margin-top: 1.5em;
+    font-size: 1.3em;
 }
 .image_2
 {
@@ -376,7 +381,7 @@ body
 }
 .texte_vignette
 {
-    padding-left: 1em;
+    padding-left: 0.9em;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -407,7 +412,6 @@ body
 .texte_hebergement
 {
     padding-top: 0.5em;
-    margin-left: 0.7em;
 }
 .fa-star
 {
@@ -425,7 +429,7 @@ body
 }
 .fa-chart-line
 {
-    font-size: 1.5em;
+    font-size: 1.3em;
     padding-top: 0.8em;
     padding-right: 1.2em;
 }
@@ -437,7 +441,7 @@ body
 {
     background-size: cover;
     width: 100%;
-    height: 25.2em;
+    height: 24.2em;
     border-top-left-radius: 1em;
     border-top-right-radius: 1em;
     background-position: center center;
@@ -493,24 +497,24 @@ body
 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    padding: 0em 3em 3em 3em;
+    padding: 0em 1em 3em 1em;
 }
 #titre_activites
 {
-    margin: 1.3em 0em 0.3em 3.3em;
+    margin: 1.3em 0em 0.3em 32px;
 }
 .vignette_activites
 {
     display: flex;
     justify-content: center;
     border-radius: 1em;
-    margin-right: 1em;
-    margin-left: 1em;
+    margin-right: 0.5em;
+    margin-left: 0.5em;
 }
 .lien_activites
 {
     width: 100%;
-    margin: 1em;
+    margin: 0.5em;
     border-radius: 1em;
     background-color: white;
     box-shadow: 0.2em 0.2em 0.8em #CDCAD1;
@@ -538,7 +542,7 @@ footer
 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    margin-left: 5em;
+    margin-left: 2em;
 }
 .parties_footer
 {
